--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 behave==1.2.6
-blosc2==2.7.0
+blosc2==2.3.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
 contourpy==1.2.1
@@ -44,3 +44,4 @@ threadpoolctl==3.5.0
 tqdm==4.66.4
 tzdata==2024.1
 urllib3==2.2.2
+city @ git+https://github.com/nicholasmartino/city.git@master#egg=city
