--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ black==24.10.0
 blosc2==2.3.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
-city @ git+https://github.com/nicholasmartino/city.git@0d9cf0b672c2038838fe5110a16bdb1d388832b6
+city @ git+https://github.com/nicholasmartino/city.git
 click==8.1.7
 contourpy==1.2.1
 cycler==0.12.1
