Refactor spatial metrics and model training steps to enhance data handling and type safety. Updated scenario definitions for improved data aggregation along the street network, and implemented bucket ID management for streamlined data retrieval from Google Cloud Storage. Enhanced type annotations across various modules for better clarity and maintainability.

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -5,7 +5,8 @@
     "reportWildcardImportFromLibrary": "none",
     "reportUntypedFunctionDecorator": "none",
     "reportRedeclaration": "none",
-    "reportAttributeAccessIssue": "none",
-    "reportUnknownArgumentType": "none",
-    "reportUnknownMemberType": "none"
+    "reportAttributeAccessIssue": "error",
+    "reportUnknownArgumentType": "error",
+    "reportUnknownMemberType": "warning",
+    "reportGeneralTypeIssues": "error"
   }
